--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-streamlit
+streamlit==1.34.0
 tensorflow==2.15.0
 keras==2.15.0
-numpy
-pandas
-scikit-learn
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.3.2
+joblib==1.3.2
+
+
 
 
